tests/ui/duplicate/dupe-symbols-3.stderr
error: symbol `fail` is already defined
  --> $DIR/dupe-symbols-3.rs:12:1
   |
LL | pub fn fail() {
   | ^^^^^^^^^^^^^

error: aborting due to 1 previous error

